<resources>
    <string name="app_name">VesperGroup</string>
    <string name="B1">1</string>
    <string name="B2">2</string>
    <string name="B3">3</string>
    <string name="B4">4</string>
    <string name="B5">5</string>
    <string name="B6">6</string>
    <string name="B7">7</string>
    <string name="B8">8</string>
    <string name="B9">9</string>
    <string name="B0">0</string>
    <string name="BDot">.</string>
    <string name="BOK">OK</string>
    <string name="btnSelectSubDiv">...</string>
    <string name="btnSelectEntityFromCatalog">Выбор из каталога</string>
    <string name="btnScanEntity">Сканировать</string>
    <string name="btnSelectDocKindDefaultText">Выберите тип документа</string>
    <string name="captionDialogSelectEntity">Выберите объект учета</string>
    <string name="captionDialogSelectAgent">Выберите корреспондента</string>
    <string name="captionDialogSelectSubDiv">Выберите подразделение</string>
    <string name="customer">Заказчик</string>
    <string name="descr_overflow_button">Настройки</string>
    <string name="descr_overflow_add_document">Создать документ</string>
    <string name="docmemo">Примечание</string>
    <string name="docTitle">Документы</string>
    <string name="labelMakedEntity">Готовая продукция</string>
    <string name="labelContents">Состав</string>
    <string name="lbFooterOrder">Итого на сумму:</string>
    <string name="lbInventarization">Инвентаризация</string>
    <string name="lbSubDiv">Подразделение</string>
    <string name="msgNotSetConfig">Не указаны настройки сервера</string>
    <string name="msgEntityNotFound">Код не найден</string>
    <string name="msgAgentNotFound">Корреспондент не найден</string>
    <string name="orderNoCaption">Заявка №</string>
    <string name="symbolNumber">№</string>
    <string-array name="docKinds">
        <item>Акт производства</item>
        <item>Внутреннее перемещение</item>
        <item>Инвентаризация</item>
        <item>Заявка</item>
        <item>Реализация</item>
    </string-array>
    <string name="docNameManufacture">Производство</string>
    <string name="docNameMove">Внутреннее перемещение</string>
    <string name="docNameInvent">Инвентаризация</string>
    <string name="docNameOrder">Заявки</string>
    <string name="docNameSale">Реализация</string>
    <string name="btnSettingCaption">Настройки</string>
    <string name="errorInitDocument">Ошибка инициализации документа</string>
    <string name="prefixDocDate">от</string>
    <string name="exitPrompt">Нажмите еще раз для выхода</string>

</resources>
