<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:id="@+id/buttonDocOrder"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/img_order"
            android:scaleType="fitXY"
            android:text="@string/docNameOrder" />

        <Button
            android:id="@+id/buttonDocSale"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/img_sale"
            android:scaleType="fitXY"
            android:text="@string/docNameSale" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:id="@+id/buttonDocManuf"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/img_manuf"
            android:scaleType="fitXY"
            android:text="@string/docNameManufacture" />

        <Button
            android:id="@+id/buttonDocMove"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/img_move"
            android:scaleType="fitXY"
            android:text="@string/docNameMove" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:id="@+id/buttonDocInvent"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/img_inventar"
            android:scaleType="fitXY"
            android:text="@string/docNameInvent" />

        <Button
            android:id="@+id/buttonSetting"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/img_setting"
            android:scaleType="fitXY"
            android:text="@string/btnSettingCaption" />
    </LinearLayout>
</LinearLayout>