<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.InventarizationActivity">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@drawable/border_for_order">

    <TextView
        android:text="@string/lbInventarization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:text="@string/lbSubDiv"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lbSubdivInventarization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:lines="2"
            android:maxLines="2"
            android:paddingStart="5dp" />

        <Button
            android:id="@+id/btnInventSelectSubdiv"
            android:text="@string/btnSelectSubDiv"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/oval_background"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>


<LinearLayout
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical"
   android:layout_marginLeft="5dp"
   android:layout_marginRight="5dp"
   android:layout_weight="2"
   android:background="@drawable/border_for_order">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/inventProgressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:visibility="invisible"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:src="@android:drawable/ic_menu_view"
            android:background="@drawable/oval_background"
            android:contentDescription="@string/btnScanEntity"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:id="@+id/inventarizationContents"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_for_order"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextInvaentarizationMemo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:textSize="10sp"
            android:hint="@string/docmemo"
            android:ems="15"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/btnSaveInventarization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/oval_background"
            android:layout_gravity="right|center_vertical"
            android:src="@android:drawable/ic_menu_save" />
    </LinearLayout>
</LinearLayout>